<resources>
    <string name="app_name">RetrofitTraining</string>
    <string name="add_note">add note</string>
    <string name="tutorial1">tutorial</string>
    <string name="tutorial2">tutorial2</string>
    <string name="finish">Finish</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="cat">CAT</string>
    <string name="userid">UserId</string>
    <string name="body">Body</string>
    <string name="create">Crate</string>
    <string name="userid_from">userId from:</string>
    <string name="userid_to">usedId to:</string>
    <string name="explanation_create">You can write in title and body # and they will all be replaced with integers from range</string>
    <string name="range_from">range from:</string>
    <string name="to">to</string>
    <string name="range_to">range to:</string>
    <string name="count_of_posts">count of posts:</string>
    <string name="hint_delete">UserId in format: 1, 2, 3, …</string>
    <string name="build_request">Build request</string>
    <string name="delete">Delete</string>
    <string name="explanation_menu">Insert url of your json database.\nJson element format: \n{\n\tuserId: Int, \n\tid: Int, \n\ttitle: String, \n\tbody: String.\n}\nYou can use free json server (tap to copy): \nhttps://jsonplaceholder.typicode.com/ \nor start custom local server in tutorial (needed PC)</string>
    <string name="base_url">Base url:</string>
    <string name="start">Start</string>
    <string name="tutorial">Tutorial</string>
    <string name="name">Name:</string>
    <string name="previous">Previous</string>
    <string name="current">Current</string>
    <string name="id">id:</string>
    <string name="link_to_full_guide">Link to full guide</string>
    <string name="open_full_guide">Open full guide</string>
    <string name="link_to_ngrok">Link to ngrok</string>
    <string name="open_ngrok">Open ngrok</string>
    <string name="delete_button">Delete button</string>
    <string name="submit">Submit</string>
    <string name="sort">Sort?</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="get">Get</string>
    <string name="next">Next</string>
    <string name="regex">Regex</string>
</resources>