<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/userId_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:hint="@string/userid_from"
            android:importantForAutofill="no"

            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/userId_tire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userId_tire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/userId_left"
            app:layout_constraintEnd_toStartOf="@id/userId_right"
            app:layout_constraintStart_toEndOf="@id/userId_left"
            app:layout_constraintTop_toTopOf="@id/userId_left" />

        <EditText
            android:id="@+id/userId_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:hint="@string/userid_to"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/userId_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userId_tire"
            app:layout_constraintTop_toTopOf="@id/userId_left" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userId_left" />

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:hint="@string/body"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/create_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:text="@string/create"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>